Arreglos en notebook 1 y 2: se arreglan algunas funciones para mejorar el entendimiento y sus explicaciones de funcionalidad

--- a/notebooks/02.ML.ipynb
+++ b/notebooks/02.ML.ipynb
@@ -6052,6 +6052,86 @@
     "plt.title('Matriz de Confusión - Modelo Final Random Forest')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3e488e1",
+   "metadata": {},
+   "source": [
+    "XGBOOST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "id": "0232b7fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_dist_xgb = {\n",
+    "    'n_estimators': [100, 200, 300],\n",
+    "    'max_depth': [3, 5, 7, 10],\n",
+    "    'learning_rate': [0.05, 0.1, 0.2, 0.3],\n",
+    "    'subsample': [0.7, 0.8, 1.0],\n",
+    "    'colsample_bytree': [0.7, 0.8, 1.0]\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af782e93",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "GridSearchCV.__init__() got an unexpected keyword argument 'param_distributions'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[261]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m xgb = XGBClassifier(random_state=\u001b[32m42\u001b[39m, use_label_encoder=\u001b[38;5;28;01mFalse\u001b[39;00m, eval_metric=\u001b[33m'\u001b[39m\u001b[33mlogloss\u001b[39m\u001b[33m'\u001b[39m, n_jobs=-\u001b[32m1\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m random_search_xgb = \u001b[43mGridSearchCV\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[43m    \u001b[49m\u001b[43mestimator\u001b[49m\u001b[43m=\u001b[49m\u001b[43mxgb\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[43m    \u001b[49m\u001b[43mparam_distributions\u001b[49m\u001b[43m=\u001b[49m\u001b[43mparam_dist_xgb\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      7\u001b[39m \u001b[43m    \u001b[49m\u001b[43mn_iter\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m100\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      8\u001b[39m \u001b[43m    \u001b[49m\u001b[43mcv\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m5\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      9\u001b[39m \u001b[43m    \u001b[49m\u001b[43mscoring\u001b[49m\u001b[43m=\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mprecision\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mrecall\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mf1\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     10\u001b[39m \u001b[43m    \u001b[49m\u001b[43mn_jobs\u001b[49m\u001b[43m=\u001b[49m\u001b[43m-\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     11\u001b[39m \u001b[43m    \u001b[49m\u001b[43mverbose\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     12\u001b[39m \u001b[43m    \u001b[49m\u001b[43mrandom_state\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m42\u001b[39;49m\n\u001b[32m     13\u001b[39m \u001b[43m)\u001b[49m\n\u001b[32m     16\u001b[39m random_search_xgb.fit(X_train_resamp_adv, y_train_resamp_adv)\n\u001b[32m     19\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m--- Búsqueda para XGBoost completada ---\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mTypeError\u001b[39m: GridSearchCV.__init__() got an unexpected keyword argument 'param_distributions'"
+     ]
+    }
+   ],
+   "source": [
+    "xgb = XGBClassifier(random_state=42, use_label_encoder=False, eval_metric='logloss', n_jobs=-1)\n",
+    "\n",
+    "\n",
+    "random_search_xgb = (\n",
+    "    estimator=xgb,\n",
+    "    param_distributions=param_dist_xgb,\n",
+    "    n_iter=100,\n",
+    "    cv=5,\n",
+    "    scoring=['precision', 'recall', 'f1'],\n",
+    "    n_jobs=-1,\n",
+    "    verbose=2,\n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "\n",
+    "random_search_xgb.fit(X_train_resamp_adv, y_train_resamp_adv)\n",
+    "\n",
+    "\n",
+    "print(\"\\n--- Búsqueda para XGBoost completada ---\")\n",
+    "print(\"Mejores parámetros encontrados:\")\n",
+    "print(random_search_xgb.best_params_)\n",
+    "\n",
+    "best_xgb_model = random_search_xgb.best_estimator_\n",
+    "y_pred_best_xgb = best_xgb_model.predict(X_test_scaled_adv)\n",
+    "\n",
+    "print(\"\\n--- Informe de Clasificación (XGBoost OPTIMIZADO) ---\")\n",
+    "print(classification_report(y_test, y_pred_best_xgb))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4800708",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
