--- a/notebooks/1.Extract_data_and_EDA.ipynb
+++ b/notebooks/1.Extract_data_and_EDA.ipynb
@@ -70,14 +70,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "fca3f5b8",
    "metadata": {},
    "outputs": [],
    "source": [
     "def extract_clean_ticker(ticker: str, start=None, end=None, interval=None) -> pd.DataFrame:\n",
     "    \"\"\"\n",
-    "    Descarga y limpia datos históricos de un ticker con yfinance.\n",
+    "    Descarga y limpia datos históricos de un ticker con yfinance y genera todo el dataframe que se utilizara para analizar el stock. \n",
     "    \n",
     "    Args:\n",
     "        ticker (str): Símbolo del ticker (ej: 'VOO', '^GSPC')\n",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "54b29bf1",
    "metadata": {},
    "outputs": [],
@@ -156,13 +156,13 @@
     "\n",
     "def añadir_indicadores_tecnicos(df: pd.DataFrame) -> pd.DataFrame:\n",
     "    \"\"\"\n",
-    "    Calcula e incorpora indicadores técnicos clásicos y divergencias basadas en volumen\n",
+    "    Calcula e incorpora indicadores técnicos  y divergencias \n",
     "    al DataFrame de precios OHLCV para análisis diario.\n",
     "    \n",
     "    Parámetros:\n",
     "    -----------\n",
     "    df : pd.DataFrame\n",
-    "        DataFrame con columnas 'open', 'high', 'low', 'close', 'volume'.\n",
+    "        Dataframe con columnas 'open', 'high', 'low', 'close', 'volume'.\n",
     "    \n",
     "    Retorna:\n",
     "    --------\n",
@@ -195,7 +195,7 @@
     "    # Estocástico\n",
     "    stoch = StochasticOscillator(high=df['high'], low=df['low'], close=df['close'], window=14, smooth_window=3)\n",
     "    df['stochastic_k'] = stoch.stoch()  # Línea %K\n",
-    "    df['stochastic_d'] = stoch.stoch_signal()  # Línea %D\n",
+    "    df['stochastic_d'] = stoch.stoch_signal()  # Línea %D o linea de confirmacion\n",
     "\n",
     "    # Bandas de Bollinger\n",
     "    bb = BollingerBands(close=df['close'], window=20, window_dev=2)\n",
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "013e5f5b",
    "metadata": {},
    "outputs": [
@@ -1033,17 +1033,15 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "print(\"\\nInformación del DataFrame:\")\n",
+    "print(\"Información del DataFrame:\")\n",
     "df_voo.info()\n",
-    "print(\"\\nResumen Estadístico:\")\n",
+    "print(\"Resumen Estadístico:\")\n",
     "display(df_voo.describe().T)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "35f47f57",
    "metadata": {},
    "outputs": [
@@ -15975,8 +15973,7 @@
    "source": [
     "\n",
     "print(\"2. Análisis de Series Temporales\")\n",
-    "fig_price_volume = make_subplots(rows=2, cols=1, shared_xaxes=True,\n",
-    "                                 vertical_spacing=0.1, row_heights=[0.7, 0.3])\n",
+    "fig_price_volume = make_subplots(rows=2, cols=1, shared_xaxes=True,vertical_spacing=0.1, row_heights=[0.7, 0.3])\n",
     "\n",
     "# Gráfico de Precios con Medias Móviles\n",
     "fig_price_volume.add_trace(go.Scatter(x=df_voo['date'], y=df_voo['close'], name='Precio de Cierre', line=dict(color='black')), row=1, col=1)\n",
@@ -15994,7 +15991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "6b8a6ec0",
    "metadata": {},
    "outputs": [
@@ -21193,20 +21190,16 @@
     }
    ],
    "source": [
-    "# 3. Análisis de Distribución y Volatilidad\n",
-    "print(\"\\n--- 3. Análisis de Distribución y Volatilidad ---\")\n",
+    "# Análisis de Distribución y Volatilidad\n",
+    "print(\"\\n3. Análisis de Distribución y Volatilidad\")\n",
     "df_voo['daily_return'] = df_voo['close'].pct_change()\n",
     "\n",
     "# Histograma de los retornos diarios\n",
-    "fig_hist = px.histogram(df_voo.dropna(), x='daily_return', nbins=100,\n",
-    "                        title='Distribución de los Retornos Diarios',\n",
-    "                        labels={'daily_return': 'Retorno Diario'})\n",
+    "fig_hist = px.histogram(df_voo.dropna(), x='daily_return', nbins=100,title='Distribución de los Retornos Diarios', labels={'daily_return': 'Retorno Diario'})\n",
     "fig_hist.show()\n",
     "\n",
     "# Gráfico de Volatilidad Móvil\n",
-    "fig_vol = px.line(df_voo, x='date', y='atr',\n",
-    "    title='Volatilidad del Mercado (ATR 14 días)',\n",
-    "    labels={'atr': 'Average True Range'})\n",
+    "fig_vol = px.line(df_voo, x='date', y='atr',title='Volatilidad del Mercado (ATR 14 días)', labels={'atr': 'Average True Range'})\n",
     "fig_vol.show()\n",
     "\n",
     "\n"
@@ -21214,7 +21207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "b9585f05",
    "metadata": {},
    "outputs": [
@@ -25547,26 +25540,26 @@
     }
    ],
    "source": [
-    "print(\"\\n--- Análisis de Caídas Máximas (Drawdown) ---\")\n",
+    "print(\"\\nAnálisis de Caídas Máximas (Drawdown)\")\n",
     "\n",
-    "# a. Calcular el rendimiento acumulado\n",
+    "# Calculo de rendimientos acumulados \n",
     "df_voo['cumulative_return'] = (1 + df_voo['daily_return']).cumprod()\n",
     "\n",
-    "# b. Calcular el máximo histórico acumulado\n",
+    "# Calcula el maximo historico\n",
     "df_voo['running_max'] = df_voo['cumulative_return'].cummax()\n",
     "\n",
-    "# c. Calcular el drawdown\n",
+    "# calcula las mayores caidas del activo \n",
     "df_voo['drawdown'] = (df_voo['cumulative_return'] - df_voo['running_max']) /df_voo['running_max']\n",
     "\n",
-    "# d. Visualizar el drawdown\n",
+    "#Visualizar eel drawdonw\n",
+    "\n",
     "fig_drawdown = go.Figure()\n",
     "fig_drawdown.add_trace(go.Scatter(\n",
     "    x=df_voo['date'], y=df_voo['drawdown'], \n",
     "    fill='tozeroy', fillcolor='rgba(255, 0, 0, 0.3)',\n",
     "    line_color='red', name='Drawdown'))\n",
     "\n",
-    "fig_drawdown.update_layout(title='Análisis de Caídas Máximas (Drawdown) del Activo',\n",
-    "                           yaxis_title='Caída desde el Máximo (%)')\n",
+    "fig_drawdown.update_layout(title='Análisis de Caídas Máximas (Drawdown) del Activo',yaxis_title='Caída desde el Máximo (%)')\n",
     "fig_drawdown.show()"
    ]
   },
@@ -25609,6 +25602,14 @@
     "sns.heatmap(correlation_matrix, annot=True, cmap='coolwarm', fmt=\".2f\", linewidths=.5)\n",
     "plt.title('Matriz de Correlación de Indicadores Técnicos')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a837e854",
+   "metadata": {},
+   "source": [
+    "BAJARAR HACER ANALISIS ESTADISTICO CON SCIPY"
    ]
   }
  ],
