--- a/notebooks/2.Feature_engeeniering_&_initial_backtest.ipynb
+++ b/notebooks/2.Feature_engeeniering_&_initial_backtest.ipynb
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "217c0f07",
    "metadata": {},
    "outputs": [],
@@ -215,7 +215,10 @@
     "# ESTRATEGIAS DE SEÑALES DE COMPRA\n",
     "# -----------------------------------------------------------------------------\n",
     "\n",
-    "## 1. Estrategia: Cruce de Precio sobre Media Móvil (Tendencia) \n",
+    "## Estrategia Cruce de Precio sobre Media Móvil (Tendencia): \n",
+    "# Esta estrategia genera la señal cuando el precio cruza hacia arriba la ema rapida \n",
+    "# ( esta puede ser la ema = 20, ema=9, etc .. segun le indiquemos) \n",
+    "\n",
     "def ema_price_signal(df, ema_fast='ema_20', close='close', rsi='rsi'):\n",
     "    df['ema_price_diff'] = df[close] - df[ema_fast]\n",
     "\n",
@@ -230,8 +233,11 @@
     "\n",
     "    return df\n",
     "\n",
-    "## 2. Estrategia: Cruce de MACD (Momentum) \n",
+    "##  Estrategia Cruce de MACD (Momentum) :  \n",
+    "# Esta estrategia genera la señal cuando la linea del macd cruza hacia arriba su señal. \n",
+    "\n",
     "def macd_signal(df, macd_line='macd', signal_line='macd_signal', ema_long='ema_50', close='close'):\n",
+    "    \n",
     "    df['macd_diff'] = df[macd_line] - df[signal_line]\n",
     "    df['signal_macd_buy'] = (\n",
     "        (df['macd_diff'] > 0)\n",
@@ -241,7 +247,7 @@
     "    )\n",
     "    return df\n",
     "\n",
-    "## 3. Estrategia: Oscilador Estocástico (Reversión) \n",
+    "##  Estrategia Oscilador Estocástico (Reversión): Detecta cuando el estocastico esta en sobreventa y revierte la tendencia, usandolo como medida de confirmacion para una reversion alcisata.  \n",
     "def stochastic_oversold_signal(df, k_line='stochastic_k', d_line='stochastic_d', ema_long='ema_50', close='close'):\n",
     "    is_oversold = (df[k_line].shift(1) < 20) & (df[d_line].shift(1) < 20)\n",
     "    k_crosses_d_up = (df[k_line] > df[d_line]) & (df[k_line].shift(1) <= df[d_line].shift(1))\n",
@@ -249,9 +255,9 @@
     "    df['signal_stochastic_buy'] = is_oversold & k_crosses_d_up & is_uptrend\n",
     "    return df\n",
     "\n",
-    "## 4. Estrategias con Ichimoku (Equilibrio y Soportes) \n",
+    "## Estrategias con Ichimoku (Equilibrio y Soportes) \n",
     "\n",
-    "# 4.1 Ichimoku Conservadora \n",
+    "#  Ichimoku Conservadora:  \n",
     "def ichimoku_buy_signals(df, tenkan='ichimoku_conversion', kijun='ichimoku_base',senkou_a='ichimoku_a', senkou_b='ichimoku_b',close='close', rsi='rsi', adx='adx'):\n",
     "    df['signal_ichimoku_buy'] = (\n",
     "        (df[close] > df[senkou_a])\n",
@@ -264,12 +270,17 @@
     "    return df\n",
     "\n",
     "# 4.2 Ichimoku Agresiva (Cruce dentro de la nube)\n",
-    "def ichimoku_signal_aggressive(df, tenkan='ichimoku_conversion', kijun='ichimoku_base',senkou_a='ichimoku_a', senkou_b='ichimoku_b',\n",
-    "                               close='close', adx='adx'):\n",
+    "def ichimoku_signal_aggressive(\n",
+    "    df, tenkan='ichimoku_conversion', \n",
+    "    kijun='ichimoku_base',\n",
+    "    senkou_a='ichimoku_a', senkou_b='ichimoku_b',\n",
+    "    close='close', adx='adx'):\n",
+    "    \n",
     "    inside_cloud = (\n",
     "        (df[close] > df[[senkou_a, senkou_b]].min(axis=1)) &\n",
     "        (df[close] < df[[senkou_a, senkou_b]].max(axis=1))\n",
     "    )\n",
+    "    \n",
     "    df['signal_ichimoku_aggressive'] = (\n",
     "        (df[tenkan] > df[kijun])\n",
     "        & (df[tenkan].shift(1) <= df[kijun].shift(1))\n",
@@ -279,6 +290,7 @@
     "    return df\n",
     "\n",
     "# 4.3 Ichimoku Cruce del Kijun (Señal temprana de equilibrio)\n",
+    "\n",
     "def ichimoku_signal_kijun_cross(df, kijun='ichimoku_base', senkou_a='ichimoku_a',close='close', rsi='rsi'):\n",
     "    df['signal_ichimoku_kijun_cross'] = (\n",
     "        (df[close] > df[kijun])\n",
@@ -289,7 +301,9 @@
     "    return df\n",
     "\n",
     "# 4.4 Ichimoku Ruptura del Chikou Span (Confirmación rápida)\n",
+    "\n",
     "def ichimoku_signal_chikou_break(df, tenkan='ichimoku_conversion', kijun='ichimoku_base',close='close'):\n",
+    "    \n",
     "    chikou_span = df[close].shift(-26)\n",
     "    past_price = df[close]\n",
     "    df['signal_ichimoku_chikou'] = (\n",
@@ -320,12 +334,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "d573f120",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Llamar a las funciones para agregar las señales al DataFrame\n",
+    "\n",
     "df = ema_price_signal(df)\n",
     "df = macd_signal(df)\n",
     "df = stochastic_oversold_signal(df)\n",
@@ -338,14 +352,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "9ca899f0",
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_combined_signal(df, signal1, signal2, window=3):\n",
     "    \"\"\"\n",
-    "    Genera una nueva columna en el DataFrame para una señal combinada.\n",
+    "    \n",
+    "    \n",
+    "    Esta funcion crea las señales a partir de una lista que le propocionaremos con las combinaciones de las señales que queremos que se cumplan \n",
+    "    siendo TRUE ambas, por ejemplo que se cumpla la señal de compra del estocastico junto con la del macd y genera uuna nueva columna dentro del dataframe. \n",
     "    La nueva columna se nombra dinámicamente, ej: 'signal_macd_&_stochastic'.\n",
     "    \n",
     "    Devuelve el DataFrame modificado y el nombre de la nueva señal creada.\n",
@@ -371,22 +388,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "e290dc3b",
    "metadata": {},
    "outputs": [],
    "source": [
     "def generar_estrategias_combinadas(df: pd.DataFrame, combinaciones_a_crear: list, window: int = 3) -> tuple[pd.DataFrame, list]:\n",
     "    \"\"\"\n",
-    "    Crea múltiples columnas de señales combinadas en un DataFrame a partir de una lista de pares.\n",
+    "    Funcion que actua como coordinador para crear las estrategias combinadas del dataframe con la funcion 'create_combined_signal'\n",
     "\n",
     "    Args:\n",
-    "        df (pd.DataFrame): El DataFrame que ya contiene las señales individuales.\n",
+    "        df : El DataFrame que ya contiene las señales individuales.\n",
     "        combinaciones_a_crear (list): Una lista de tuplas, donde cada tupla contiene dos nombres de señales a combinar (principal, confirmación).\n",
-    "        window (int): La ventana de días para la señal de confirmación.\n",
+    "        window (int): La ventana de días para la señal de confirmación, poniendole el nombre de window seguimos la nomenclatura de los prametros\n",
+    "                        de la libreria TA dentro para una mejor comprension del trabajo. \n",
     "\n",
     "    Returns:\n",
-    "        tuple[pd.DataFrame, list]: Una tupla conteniendo el DataFrame modificado y una lista con los nombres de las nuevas columnas de señales creadas.\n",
+    "        nos devolvera las columnas con las señales generadas dentro de nuestro dataframe. \n",
     "    \"\"\"\n",
     "    estrategias_combinadas_creadas = []\n",
     "    \n",
@@ -457,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "aadf3abf",
    "metadata": {},
    "outputs": [],
@@ -465,9 +483,12 @@
     "def backtest_dca_pure(df, price_col='close', date_col='date', monthly_invest=200):\n",
     "    \"\"\"\n",
     "    Calcula el rendimiento de una estrategia de inversión pura de\n",
-    "    Aportaciones Periódicas (Dollar-Cost Averaging).\n",
+    "    Aportaciones Periódicas (Dollar-Cost Averaging), es decir seria la estrategia basica (benchmark) que utiliaremos para evaluar la efectividad del trabajo.\n",
+    "    Aqui simplemente el inversor automatiza una inversion periodica todos los meses del año, con el fin de mejorar su patrimonio. \n",
+    "    \n",
+    "    \n",
     "    \"\"\"\n",
-    "    #  Asegura de que la columna de fecha es de tipo datetime ---\n",
+    "    \n",
     "    df[date_col] = pd.to_datetime(df[date_col])\n",
     "    \n",
     "    \n",
@@ -518,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "b542f176",
    "metadata": {},
    "outputs": [],
@@ -529,7 +550,15 @@
     "                                    date_col='date', initial_trading_cash=1000, \n",
     "                                    verbose=True):\n",
     "    \"\"\"\n",
-    "    Ejecuta un backtest CON Stop-Loss y reporta las posiciones que quedan abiertas al final.\n",
+    "    Ejecuta un backtest CON Stop-Loss y reporta las posiciones que quedan abiertas al final. \n",
+    "    En esta funcion se incluye la funcionalidad del DCA puro pero agregandole la funcionalidad de crear un stop loss y take profit, \n",
+    "    automatiza que el inversor cuando el sistema detecta una oportunidad de compra en un punto en el que se activan las señales generadas,\n",
+    "    compra estableciendo un umbral en el que le proteja de posibles caidas con el fin de no quedarse pillado en una inversion en el caso de una gran caida, \n",
+    "    recuperando posteriormente en un punto mas alto con el fin de ir juntando capital. \n",
+    "    \n",
+    "    Parte de una inversion inicial en la cual ira jugando con ese capital para hacer estas inversiones de modo que con el tiempo este capital se recupere \n",
+    "    y el inversor solo trabaje con el dinero generado con la estrategia, de modo que el riesto sobre el capital propio se vea reducido a 0 y este sea el producido por el mismo sistema. \n",
+    "    \n",
     "    \"\"\"\n",
     "    df[date_col] = pd.to_datetime(df[date_col])\n",
     "    \n",
@@ -604,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "12a0c5cc",
    "metadata": {},
    "outputs": [],
@@ -613,9 +642,13 @@
     "                        monthly_invest=200, trade_amount=50,\n",
     "                        atr_multiplier_tp=3.0,  # Take profit a 3 veces el ATR\n",
     "                        atr_multiplier_sl=1.5,  # Stop loss a 1.5 veces el ATR\n",
-    "                        date_col='date', initial_trading_cash=1000, atr_col='atr', verbose=True):\n",
+    "                        date_col='date', initial_trading_cash=1000, atr_col='atr', \n",
+    "                        verbose=True):\n",
+    "    \n",
     "    \"\"\"\n",
-    "    Ejecuta un backtest donde el Take Profit y Stop Loss tomando el ATR como multiplicador haciendo que ambos sean dinamicos.\n",
+    "    Esta funcion trabaja de una forma muy similar a 'backtest_dca_plus_trading_WITH_SL' pero tomando el indicador Average True Range (ATR) \n",
+    "    como medida para establecer el stoploss y takeprofit de forma dinamica, es decir, segun el indice de volatilidad dado por este indicador marcara un SL y TP \n",
+    "    diferentes en cada nivel con el fin de maximizar el beneficio. \n",
     "    \"\"\"\n",
     "    df[date_col] = pd.to_datetime(df[date_col])\n",
     "    cash, dca_shares, open_trades, total_dca_contributions, trading_contributions, trading_pnl, last_month = initial_trading_cash, 0, [], 0, 0, 0, None\n",
@@ -665,16 +698,25 @@
     "    open_trades_at_end = len(open_trades)\n",
     "    value_of_open_trades = sum(trade['shares'] * df[price_col].iloc[-1] for trade in open_trades)\n",
     "    \n",
-    "    return {'Strategy': f\"{signal_col} (ATR Stops)\", 'Final Portfolio Value': final_value, \n",
+    "    result = {'Strategy': f\"{signal_col} (ATR Stops)\", 'Final Portfolio Value': final_value, \n",
     "            'Total Contributions': final_contributions, 'Absolute Return': absolute_return, \n",
     "            'Percentage Return': percentage_return, 'Trading PnL': trading_pnl, \n",
     "            'Trading Capital Used': trading_contributions, 'Open Trades at End': open_trades_at_end, \n",
-    "            'Value of Open Trades': value_of_open_trades}"
+    "            'Value of Open Trades': value_of_open_trades}\n",
+    "    \n",
+    "    if verbose: \n",
+    "        print(f\"Resultados para: {signal_col} (Con SL)\")\n",
+    "        print(f\"Retorno Porcentual: {percentage_return:.2f}%\")\n",
+    "        print(f\"Posiciones Abiertas al Final: {open_trades_at_end}\")\n",
+    "        print(f\"Valor de Posiciones Abiertas: ${value_of_open_trades:,.2f}\\n\")\n",
+    "        \n",
+    "    return result\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "0f26c0d3",
    "metadata": {},
    "outputs": [],
@@ -684,7 +726,9 @@
     "                                    take_profit_pct=0.10,\n",
     "                                    date_col='date', initial_trading_cash=1000, verbose=True):\n",
     "    \"\"\"\n",
-    "    Ejecuta un backtest sin Stop-Loss indicando las posiciones que quedan abiertas en la estrategia.\n",
+    "    Esta funcion ejecuta solo un takeprofit que establecemos previamente, se elimina el stop loss y partimos de la hipotesis en la que en un mercado a largo plazo y predominantemente alcista, \n",
+    "    el precio tenderá a subir y evitaremos el punto en el que nos quedamos pillados dentro de la compra de una accion. \n",
+    "    Esta funcion tiene el fin de que el aporte en comprar extraordinarias de acciones se comporte de manera parecida a la estrategia del dca puro pero recuperando lo invertido en un TAKe profit establecido. \n",
     "    \"\"\"\n",
     "    df[date_col] = pd.to_datetime(df[date_col])\n",
     "    \n",
@@ -749,7 +793,7 @@
     "    }\n",
     "    \n",
     "    if verbose:\n",
-    "        print(f\"--- Resultados para: {signal_col} (Sin SL) ---\")\n",
+    "        print(f\" Resultados para: {signal_col} (Sin SL)\")\n",
     "        print(f\"Retorno Porcentual: {percentage_return:.2f}%\")\n",
     "        print(f\"Posiciones Abiertas al Final: {open_trades_at_end}\")\n",
     "        print(f\"Valor de Posiciones Abiertas: ${value_of_open_trades:,.2f}\\n\")\n",
@@ -759,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "9f0c6e10",
    "metadata": {},
    "outputs": [],
@@ -767,10 +811,11 @@
     "\n",
     "def evaluate_all_strategies(df_original, signal_columns, backtest_func, backtest_params):\n",
     "    \"\"\"\n",
-    "    Ejecuta el backtest para una lista de estrategias y devuelve un DataFrame con los resultados.\n",
+    "    Esta funcion ejecuta el backtest para una lista de estrategias que definimos con anterioridad y nos devuelve una df comparativo de los resultados de cada una, con el fin de evaluar cual es la estrategia \n",
+    "    que mejor funciona para posteriormente probarla con los modelos de machine learning entrenados. \n",
     "    \n",
     "    Args:\n",
-    "        df_original (pd.DataFrame): Tu DataFrame con todos los indicadores calculados.\n",
+    "        df_original (pd.DataFrame):  DataFrame con todos los indicadores calculados.\n",
     "        signal_columns (list): Una lista con los nombres de las columnas de señales a probar.\n",
     "        backtest_func (function): La función de backtest a utilizar (ej. backtest_with_sl).\n",
     "        backtest_params (dict): Un diccionario con los parámetros para el backtest.\n",
@@ -1861,19 +1906,19 @@
    "source": [
     "# Creación de Características Numéricas Avanzadas \n",
     "\n",
-    "# a) Características de las Velas (Candlestick Features)\n",
+    "# \n",
     "df['body_size'] = abs(df['close'] - df['open'])\n",
     "df['upper_wick'] = df['high'] - df[['open', 'close']].max(axis=1)\n",
     "df['lower_wick'] = df[['open', 'close']].min(axis=1) - df['low']\n",
     "\n",
-    "# b) Momentum de los Indicadores (Rate of Change)\n",
+    "# Calcula el ROC, que mide el cambio porcentual del activo a lo larco del tiempo \n",
     "df['rsi_roc_5'] = df['rsi'].pct_change(periods=5) * 100\n",
     "\n",
-    "# c) Características Cíclicas del Tiempo\n",
+    "# Características Cíclicas del Tiempo\n",
     "df['month_sin'] = np.sin(2 * np.pi * df['date'].dt.month / 12)\n",
     "df['month_cos'] = np.cos(2 * np.pi * df['date'].dt.month / 12)\n",
     "\n",
-    "# d)creamos cruzes del precio con kijun y los cruces del tenkan y kijun\n",
+    "# Esto crea los cruces entre el precio, kinun y tenkan \n",
     "df['price_vs_kijun'] = df['close'] - df['ichimoku_base']\n",
     "df['tenkan_vs_kijun'] = df['ichimoku_conversion'] - df['ichimoku_base']\n",
     "\n",
